# zed-nix-extension

./: .envrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  devenv.nix  devenv.yaml  extension.toml  flake.nix  nixd.nix  shell.nix
.github/workflows/: release.yml
.zed/: settings.json
deadnix-ls/: Cargo.toml
deadnix-ls/src/: linter.rs  main.rs  output.rs  settings.rs
languages/nix/: injections.scm
nix/: compat.nix  dendritic.nix  devshell.nix  git-hooks.nix  rust.nix  zed-extension.nix
src/: language_servers.rs  nix.rs
src/language_servers/: deadnix.rs  statix.rs
statix-ls/: Cargo.toml
statix-ls/src/: linter.rs  main.rs  output.rs  settings.rs
